add mysql dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "LICENSE"
 requires-python = ">=3.14"
 dependencies = [
     "django>=6.0.1",
+    "gunicorn>=25.1.0",
 ]
 
 [dependency-groups]
@@ -14,4 +15,7 @@ dev = [
     "duckdb>=1.4.4",
     "jupyterlab>=4.5.3",
     "polars>=1.37.1",
+]
+mysql = [
+    "mysqlclient>=2.2.8",
 ]
