--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.14"
 dependencies = [
     "django>=6.0.1",
     "gunicorn>=25.1.0",
+    "whitenoise[brotli]>=6.11.0",
 ]
 
 [dependency-groups]
